# hummingbird_nmpc

./: CMakeLists.txt  README.md  package.xml  requirement.txt  setup.py
include/hummingbird_nmpc/: nmpc_controller.py
launch/: hummingbird_spawn.launch
src/: hovering_example.py
src/hummingbird_nmpc/: config.py  nmpc_controller.py  state.py  trajectory.py  utils.py
